<resources>
    <string name="app_name">Dietitian Calculators</string>
    <string name="bmiLogo">Body Mass Index Calculator</string>
    <string name="csodiumLogo">Corrected Sodium</string>
    <string name="bmrLogo">Base Metabolic Rate Calculator</string>
    <string name="bodyFatLogo">Body Fat Percentage Calculator</string>
    <string name="mifflin">Mifflin St Jeor</string>
    <string name="hamwi">Hamwi IBW</string>
    <string name="stressfact">Stress Factor</string>
    <string name="sf">SF:</string>
    <string name="macrosLogo">Macros Calculator</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="units">Units:</string>
    <string name="height">Height:</string>
    <string name="inches">Inches</string>
    <string name="glucoseUnit">mg/dL</string>
    <string name="sodiumUnit">mEq/L</string>
    <string name="cm">Centimeters</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="preference_title_calculators">Calculator Settings</string>
    <string name="weight">Weight:</string>
    <string name="glucose">Glucose:</string>
    <string name="sodium">Sodium:</string>
    <string name="pounds">Pounds</string>
    <string name="kg">Kilograms</string>
    <string name="calculate">Calculate</string>
    <string name="sex">Sex:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age:</string>
    <string name="years">Years Old</string>
    <string name="waistLogo">Waist Circumference:</string>
    <string name="wristLogo">Wrist Circumference:</string>
    <string name="hipLogo">Hip Circumference:</string>
    <string name="forearmLogo">Forearm Circumference:</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_label" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="pref_unit_key">unit</string>
    <string name="pref_unit_label" translatable="false">Temperature units</string>
    <string name="pref_unit_default" translatable="false">metric</string>
    <string name="pref_unit_imperial">imperial</string>
    <string name="pref_unit_metric">metric</string>
    <string name="zinc">Zinc</string>
    <string name="clear_all">Clear All</string>
    <string name="_0">0</string>
    <string name="sulfate">Sulfate</string>
    <string name="sulfur">Sulfur</string>
    <string name="potassium">Potassium</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="magnesium">Magnesium</string>
    <string name="chlorine">Chlorine</string>
    <string name="calcium">Calcium</string>
    <string name="meq">mEq</string>
    <string name="milligrams">Milligrams</string>
    <string name="mineral">Mineral</string>
    <string name="submit">Submit</string>
    <string name="off_on">Off/On</string>
    <string name="corrected_sodium">Corrected Sodium</string>
    <string name="milligrams_to_meq">Milligrams to mEq</string>
    <string name="corrected_calcium">Corrected Calcium</string>
    <string name="albumin">Albumin</string>
    <string name="g_dl">g/dL</string>
    <string name="mg_dl">mg/dL</string>
    <string name="milligram_to_meq">Milligram to mEq</string>
    <string name="hamwi_ibw">Hamwi IBW</string>
    <string name="small_frame">Small Frame</string>
    <string name="vitamin_d_conversion">Vitamin D Conversion</string>
    <string name="iu_to_ug">IU to ug</string>
    <string name="ug_to_iu">ug to IU</string>
    <string name="vitamin_d">Vitamin D</string>
    <string name="iu">IU</string>
    <string name="ug">ug</string>
    <string name="nitrogen_balance">Nitrogen Balance</string>
    <string name="_24_hour_protein_intake">24 Hour Protein Intake</string>
    <string name="grams">grams</string>
    <string name="_24_hour_urinary_urea_nitrogen">24 Hour Urinary Urea Nitrogen</string>
    <string name="adjusted_body_weight">Adjusted Body Weight</string>
    <string name="actual_body_weight">Actual Body Weight</string>
    <string name="ideal_body_weight">Ideal Body Weight</string>
    <string name="schofield_equation">Schofield Equation</string>
    <string name="_3_years"><![CDATA[< 3]]></string>
    <string name="_3_10">3-10</string>
    <string name="_10_18">10-18</string>
    <string name="_18_30">18-30</string>
    <string name="grams_ounce_conversion">Grams/Ounce Conversion</string>
    <string name="ounce_to_grams">Ounce to Grams</string>
    <string name="grams_to_ounces">Grams to Ounces</string>
    <string name="value">Value</string>
    <string name="ounces">Ounces</string>
    <string name="amount">Amount</string>
    <string name="world_health_organization_equation">World Health Organization Equation</string>
    <string name="_0_3">0-3</string>
    <string name="meq_to_milligram">mEq to Milligram</string>
</resources>
