<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jab6677.healthcalculators.MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmiLogo"
        android:id="@+id/bmiButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmrLogo"
        android:id="@+id/bmrButton"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/bmiButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bodyFatLogo"
        android:id="@+id/bfButton"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/bmrButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/macrosLogo"
        android:id="@+id/macroButton"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/bfButton"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
